# sentry-cpp-library

./: CMakeLists.txt  README.md  SentryCppConfig.cmake.in
examples/: CMakeLists.txt  main.cpp
include/: sentry.h  sentry_common.h
src/: backtracehandler.cpp  backtracehandler.h  hub.cpp  hub.h  scope.cpp  scope.h  sentry.cpp  sentry_common.cpp  transport.cpp  transport.h
